# ofi-project

./: README.md  pyproject.toml  view_ofi_features.py
features/: lasso_loadings.nc  ofi_panel.nc  ofi_panel_wide.csv  ofi_single.parquet  ofi_single_preview.csv
notebooks/: 01_feature_demo.ipynb  02_cross_impact_panel.ipynb
notebooks/.ipynb_checkpoints/: 01_feature_demo-checkpoint.ipynb  02_cross_impact_panel-checkpoint.ipynb
ofi/: __init__.py  aggregates.py  events.py  loader.py  utils.py
ofi.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
paper/: answers.aux  answers.tex
scripts/: build_cross_asset_ofi.py  build_single_stock_ofi.py
