[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofi"
version = "0.1.0"
description = "Order-Flow Imbalance feature builders"
authors = [{name = "Allon Nam", email = "allonhnam@gatech.edu"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "scikit-learn>=1.3",
    "xarray>=2023",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["ofi*"]          # <— ONLY package the 'ofi' directory
exclude = ["data*", "notebooks*", "paper*"]

[project.scripts]
ofi-build-single = "scripts.build_single_stock_ofi:main"
ofi-build-cross  = "scripts.build_cross_asset_ofi:main"
